--- a/sample.html
+++ b/sample.html
@@ -1,24 +1,6 @@
-# Chart.js
-My self learning on Chart.js
-
-![image](https://user-images.githubusercontent.com/56244402/110635015-3ad93100-81dd-11eb-947f-26989fdfde5e.png)
-
-## Getting Started
-
-Let's get started using Chart.js!
-
-First, we need to have a canvas in our page.
-```
 <canvas id="myChart"></canvas>
-```
-Now that we have a canvas we can use, we need to include Chart.js in our page.
-
-```
 <script src="js/chart.js"></script>
-```
-Now, we can create a chart. We add a script to our page:
-
-```
+<script>
 var ctx = document.getElementById('myChart').getContext('2d');
 var chart = new Chart(ctx, {
     // The type of chart we want to create
@@ -38,4 +20,4 @@ var chart = new Chart(ctx, {
     // Configuration options go here
     options: {}
 });
-```
+</script>
