--- a/sample.html
+++ b/sample.html
@@ -25,14 +25,14 @@ BODY {
   var ctx = document.getElementById('myChart').getContext('2d');
   var chart = new Chart(ctx, {
       // The type of chart we want to create
-      type: 'bar',
+      type: 'line',
 
       // The data for our dataset
       data: {
           labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
           datasets: [{
-              label: 'My First dataset',
-              backgroundColor: 'rgb(255, 99, 132)',
+              label: 'Temperature',
+              
               borderColor: 'rgb(255, 99, 132)',
               data: [0, 10, 5, 2, 20, 30, 45]
           }]
